--- a/test-1.html
+++ b/test-1.html
@@ -227,32 +227,39 @@
 
 
 
+
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.2.0"></script>
 
 <div style="width: 100%; max-width: 950px; margin: 100px auto 30px auto; padding: 30px; background: #ffffff; border: 1px solid #eeeeee; border-radius: 12px; font-family: 'Oswald', sans-serif; box-shadow: 0 4px 20px rgba(0,0,0,0.05);">
-  <h2 style="display: inline-block; background: #F15A22; color: #ffffff; padding: 5px 15px; border-radius: 4px; font-size: 1.4em; margin-bottom: 5px; font-weight: 600; text-transform: uppercase; letter-spacing: 1px;">Performance Data Analysis</h2>
+  <h2 style="display: inline-block; background: #F15A22; color: #ffffff; padding: 5px 15px; border-radius: 4px; font-size: 1.4em; margin-bottom: 5px; font-weight: 600; letter-spacing: 0.5px;">Performance Data Analysis</h2>
   <p style="font-size: 0.85em; color: #888; margin-bottom: 35px; font-family: 'Montserrat', sans-serif; padding-left: 5px;">Tournament & Internal Qualifier Verified Records.</p>
   
   <div style="margin-bottom: 60px; position: relative;">
     <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 15px; border-bottom: 2px solid #F15A22; padding-bottom: 8px;">
-      <h3 style="font-size: 1.1em; color: #0c2340; margin: 0; font-weight: 500; text-transform: uppercase;">Official Tournament Rounds</h3>
-      <span style="background: #0c2340; color: #fff; padding: 4px 10px; font-size: 0.8em; border-radius: 3px; font-weight: 500; letter-spacing: 0.5px;">FRESHMAN SEASON</span>
+      <h3 style="font-size: 1.1em; color: #0c2340; margin: 0; font-weight: 500;">Official Tournament Rounds</h3>
+      <span style="background: #0c2340; color: #fff; padding: 4px 10px; font-size: 0.8em; border-radius: 3px; font-weight: 500;">Freshman Season</span>
     </div>
     
-    <div style="position: relative; height: 420px; background: #fafafa; border-radius: 8px; padding: 35px 15px 15px 15px;">
+    <div style="position: relative; height: 440px; background: #fafafa; border-radius: 8px; padding: 35px 15px 45px 15px;">
       <div style="position: absolute; top: 15px; right: 20px; z-index: 10; background: rgba(12, 35, 64, 0.05); border: 1px solid #0c2340; padding: 5px 12px; border-radius: 20px; display: flex; align-items: center; gap: 8px;">
-        <span style="font-family: 'Montserrat', sans-serif; font-size: 0.75em; font-weight: 700; color: #0c2340; text-transform: uppercase;">Adj. Avg:</span>
-        <span style="font-size: 1.1em; font-weight: 700; color: #F15A22;">71.0</span>
+        <span style="font-family: 'Montserrat', sans-serif; font-size: 0.8em; font-weight: 700; color: #0c2340;">Adj. Avg:</span>
+        <span style="font-size: 1.1em; font-weight: 700; color: #0c2340;">71.0</span>
       </div>
+
       <canvas id="officialTournamentChart"></canvas>
+
+      <div style="position: absolute; bottom: 12px; left: 15px; right: 15px; display: flex; justify-content: space-between; font-family: 'Montserrat', sans-serif; font-size: 0.75em; color: #666; border-top: 1px dashed #ddd; pt: 8px; padding-top: 8px;">
+        <span><strong>Source:</strong> Scoreboard.Clipped</span>
+        <span><strong>Cumulative:</strong> 5 eventos / 15 rondas</span>
+      </div>
     </div>
   </div>
 
   <div style="position: relative;">
     <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 15px; border-bottom: 2px solid #806600; padding-bottom: 8px;">
-      <h3 style="font-size: 1.1em; color: #0c2340; margin: 0; font-weight: 500; text-transform: uppercase;">Internal Qualifier Rounds</h3>
-      <span style="background: #806600; color: #fff; padding: 4px 10px; font-size: 0.8em; border-radius: 3px; font-weight: 500; letter-spacing: 0.5px;">TPC SAN ANTONIO</span>
+      <h3 style="font-size: 1.1em; color: #0c2340; margin: 0; font-weight: 500;">Internal Qualifier Rounds</h3>
+      <span style="background: #806600; color: #fff; padding: 4px 10px; font-size: 0.8em; border-radius: 3px; font-weight: 500;">TPC San Antonio</span>
     </div>
     <div style="position: relative; height: 400px; background: #fafafa; border-radius: 8px; padding: 15px;">
       <canvas id="internalQualifierChart"></canvas>
@@ -297,7 +304,7 @@ new Chart(ctxOfficial, {
         },
         borderRadius: 25,
         color: '#0c2340',
-        font: { weight: '700', size: 14 }, // 가독성을 위해 14px로 상향
+        font: { weight: '700', size: 14 },
         formatter: function(value, context) {
           const ranks = ['T9', 'T12', 'T24', 'T55', 'T38', 'T3'];
           return ranks[context.dataIndex];
@@ -308,19 +315,15 @@ new Chart(ctxOfficial, {
   options: {
     responsive: true,
     maintainAspectRatio: false,
-    layout: { padding: { top: 30 } },
-    // 툴팁이 바로 사라지도록 하는 인터렉션 설정 수정
-    interaction: { 
-      mode: 'nearest', 
-      intersect: true // 포인트에 직접 마우스가 닿았을 때만 표시
-    },
+    layout: { padding: { top: 30, bottom: 10 } },
+    interaction: { mode: 'nearest', intersect: true },
     scales: {
       y: {
         min: 65,
         max: 82,
         grid: { color: '#e5e5e5', drawBorder: false },
         ticks: { font: { size: 12, weight: '600' }, color: '#333', padding: 10 },
-        title: { display: true, text: 'AVG. STROKES', color: '#333', font: { size: 12, weight: '700' } }
+        title: { display: true, text: 'Avg. Strokes', color: '#333', font: { size: 12, weight: '700' } }
       },
       x: {
         grid: { display: false },
@@ -380,7 +383,7 @@ new Chart(ctxInternal, {
     maintainAspectRatio: false,
     interaction: { mode: 'nearest', intersect: true },
     scales: {
-      y: { min: 65, max: 85, grid: { color: '#e5e5e5' }, ticks: { font: { size: 11, weight: '600' }, color: '#333' }, title: { display: true, text: 'STROKES', color: '#333', font: { size: 11, weight: '700' } } },
+      y: { min: 65, max: 85, grid: { color: '#e5e5e5' }, ticks: { font: { size: 11, weight: '600' }, color: '#333' }, title: { display: true, text: 'Strokes', color: '#333', font: { size: 11, weight: '700' } } },
       x: { grid: { display: false }, ticks: { font: { size: 9 }, color: '#333' } }
     },
     plugins: {
