--- a/test-1.html
+++ b/test-1.html
@@ -403,3 +403,85 @@ new Chart(ctxInternal, {
 
 
 
+퀄리파잉 기로 테스트
+
+
+<div style="width: 100%; max-width: 950px; margin: 40px auto; font-family: 'Oswald', sans-serif;">
+  
+  <div style="margin-bottom: 40px;">
+    <h3 style="color: #0c2340; border-left: 5px solid #F15A22; padding-left: 15px; margin-bottom: 20px; text-transform: none;">Current Qualifier: Upcoming Spring Season</h3>
+    
+    <div style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 15px;">
+      <div style="background: #fafafa; border: 1px solid #0c2340; border-radius: 8px; padding: 20px; text-align: center;">
+        <div style="font-size: 0.9em; color: #888; margin-bottom: 5px;">Feb 09 (Mon)</div>
+        <div style="font-size: 1.2em; font-weight: 600; color: #0c2340; margin-bottom: 10px;">Qualifier #1</div>
+        <div style="font-size: 2.5em; font-weight: 700; color: #ccc;">--</div>
+      </div>
+      <div style="background: #fafafa; border: 1px solid #0c2340; border-radius: 8px; padding: 20px; text-align: center;">
+        <div style="font-size: 0.9em; color: #888; margin-bottom: 5px;">Feb 10 (Tue)</div>
+        <div style="font-size: 1.2em; font-weight: 600; color: #0c2340; margin-bottom: 10px;">Qualifier #2</div>
+        <div style="font-size: 2.5em; font-weight: 700; color: #ccc;">--</div>
+      </div>
+      <div style="background: #fafafa; border: 1px solid #0c2340; border-radius: 8px; padding: 20px; text-align: center;">
+        <div style="font-size: 0.9em; color: #888; margin-bottom: 5px;">Feb 11 (Wed)</div>
+        <div style="font-size: 1.2em; font-weight: 600; color: #0c2340; margin-bottom: 10px;">Qualifier #3</div>
+        <div style="font-size: 2.5em; font-weight: 700; color: #ccc;">--</div>
+      </div>
+    </div>
+  </div>
+
+  <div>
+    <h3 style="color: #0c2340; border-left: 5px solid #806600; padding-left: 15px; margin-bottom: 20px; text-transform: none;">Historical Qualifier Performance (Canyons)</h3>
+    <div style="overflow-x: auto;">
+      <table style="width: 100%; border-collapse: collapse; background: #ffffff; border: 1px solid #0c2340;">
+        <thead>
+          <tr style="background: #0c2340; color: #ffffff;">
+            <th style="padding: 12px; border: 1px solid rgba(255,255,255,0.1); font-weight: 500;">Date</th>
+            <th style="padding: 12px; border: 1px solid rgba(255,255,255,0.1); font-weight: 500;">Course</th>
+            <th style="padding: 12px; border: 1px solid rgba(255,255,255,0.1); font-weight: 500;">Score</th>
+            <th style="padding: 12px; border: 1px solid rgba(255,255,255,0.1); font-weight: 500;">To Par</th>
+          </tr>
+        </thead>
+        <tbody style="text-align: center; color: #333;">
+          <tr style="border-bottom: 1px solid #0c2340;">
+            <td style="padding: 12px; border-right: 1px solid #eee;">Jan 22, 2026</td>
+            <td style="padding: 12px; border-right: 1px solid #eee;">Canyons</td>
+            <td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #F15A22;">68</td>
+            <td style="padding: 12px;">-4</td>
+          </tr>
+          <tr style="border-bottom: 1px solid #0c2340;">
+            <td style="padding: 12px; border-right: 1px solid #eee;">Sep 26, 2025</td>
+            <td style="padding: 12px; border-right: 1px solid #eee;">Canyons</td>
+            <td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700;">73</td>
+            <td style="padding: 12px;">+1</td>
+          </tr>
+          <tr style="border-bottom: 1px solid #0c2340;">
+            <td style="padding: 12px; border-right: 1px solid #eee;">Sep 01, 2025</td>
+            <td style="padding: 12px; border-right: 1px solid #eee;">Canyons</td>
+            <td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #F15A22;">69</td>
+            <td style="padding: 12px;">-3</td>
+          </tr>
+          <tr style="border-bottom: 1px solid #0c2340;">
+            <td style="padding: 12px; border-right: 1px solid #eee;">Aug 28, 2025</td>
+            <td style="padding: 12px; border-right: 1px solid #eee;">Canyons</td>
+            <td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #F15A22;">68</td>
+            <td style="padding: 12px;">-4</td>
+          </tr>
+          <tr>
+            <td style="padding: 12px; border-right: 1px solid #eee;">Aug 27, 2025</td>
+            <td style="padding: 12px; border-right: 1px solid #eee;">Canyons</td>
+            <td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #F15A22;">69</td>
+            <td style="padding: 12px;">-3</td>
+          </tr>
+        </tbody>
+        <tfoot>
+          <tr style="background: rgba(12, 35, 64, 0.05); font-weight: 700;">
+            <td colspan="2" style="padding: 12px; text-align: right; border-right: 1px solid #eee;">Cumulative Average:</td>
+            <td style="padding: 12px; color: #0c2340; border-right: 1px solid #eee;">69.4</td>
+            <td style="padding: 12px; color: #F15A22;">-2.6 Avg</td>
+          </tr>
+        </tfoot>
+      </table>
+    </div>
+  </div>
+</div>
