--- a/test-1.html
+++ b/test-1.html
@@ -403,82 +403,91 @@ new Chart(ctxInternal, {
 
 
 
-퀄리파잉 기로 테스트
+퀄리파잉 기록 테스트
 
 
 <div style="width: 100%; max-width: 950px; margin: 40px auto; font-family: 'Oswald', sans-serif;">
   
   <div style="margin-bottom: 40px;">
-    <h3 style="color: #0c2340; border-left: 5px solid #F15A22; padding-left: 15px; margin-bottom: 20px; text-transform: none;">Current Qualifier: Upcoming Spring Season</h3>
+    <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px; border-left: 5px solid #E31837; padding-left: 15px;">
+      <h3 style="color: #0c2340; margin: 0; text-transform: none; font-size: 1.3em;">Upcoming Tournaments</h3>
+      <span style="font-family: 'Montserrat', sans-serif; font-size: 0.85em; color: #888;">Spring Season Qualifier</span>
+    </div>
     
     <div style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 15px;">
-      <div style="background: #fafafa; border: 1px solid #0c2340; border-radius: 8px; padding: 20px; text-align: center;">
-        <div style="font-size: 0.9em; color: #888; margin-bottom: 5px;">Feb 09 (Mon)</div>
-        <div style="font-size: 1.2em; font-weight: 600; color: #0c2340; margin-bottom: 10px;">Qualifier #1</div>
-        <div style="font-size: 2.5em; font-weight: 700; color: #ccc;">--</div>
+      <div style="background: #ffffff; border: 1.5px solid #0c2340; border-radius: 8px; padding: 20px; text-align: center; box-shadow: 0 4px 10px rgba(0,0,0,0.03);">
+        <div style="font-size: 0.85em; color: #666; margin-bottom: 5px; font-family: 'Montserrat', sans-serif;">Feb 10 (Tue)</div>
+        <div style="font-size: 1.05em; font-weight: 600; color: #0c2340; margin-bottom: 12px; letter-spacing: 0.2px;">The Canyons Course / 1:00</div>
+        <div style="display: inline-block; padding: 4px 15px; background: #f0f0f0; color: #aaa; border-radius: 15px; font-size: 0.9em; font-weight: 700;">TBD</div>
       </div>
-      <div style="background: #fafafa; border: 1px solid #0c2340; border-radius: 8px; padding: 20px; text-align: center;">
-        <div style="font-size: 0.9em; color: #888; margin-bottom: 5px;">Feb 10 (Tue)</div>
-        <div style="font-size: 1.2em; font-weight: 600; color: #0c2340; margin-bottom: 10px;">Qualifier #2</div>
-        <div style="font-size: 2.5em; font-weight: 700; color: #ccc;">--</div>
+      <div style="background: #ffffff; border: 1.5px solid #0c2340; border-radius: 8px; padding: 20px; text-align: center; box-shadow: 0 4px 10px rgba(0,0,0,0.03);">
+        <div style="font-size: 0.85em; color: #666; margin-bottom: 5px; font-family: 'Montserrat', sans-serif;">Feb 12 (Thur)</div>
+        <div style="font-size: 1.05em; font-weight: 600; color: #0c2340; margin-bottom: 12px; letter-spacing: 0.2px;">The Canyons Course / 1:00</div>
+        <div style="display: inline-block; padding: 4px 15px; background: #f0f0f0; color: #aaa; border-radius: 15px; font-size: 0.9em; font-weight: 700;">TBD</div>
       </div>
-      <div style="background: #fafafa; border: 1px solid #0c2340; border-radius: 8px; padding: 20px; text-align: center;">
-        <div style="font-size: 0.9em; color: #888; margin-bottom: 5px;">Feb 11 (Wed)</div>
-        <div style="font-size: 1.2em; font-weight: 600; color: #0c2340; margin-bottom: 10px;">Qualifier #3</div>
-        <div style="font-size: 2.5em; font-weight: 700; color: #ccc;">--</div>
+      <div style="background: #ffffff; border: 1.5px solid #0c2340; border-radius: 8px; padding: 20px; text-align: center; box-shadow: 0 4px 10px rgba(0,0,0,0.03);">
+        <div style="font-size: 0.85em; color: #666; margin-bottom: 5px; font-family: 'Montserrat', sans-serif;">Feb 17 (Tue)</div>
+        <div style="font-size: 1.05em; font-weight: 600; color: #0c2340; margin-bottom: 12px; letter-spacing: 0.2px;">The Canyons Course / 1:00</div>
+        <div style="display: inline-block; padding: 4px 15px; background: #f0f0f0; color: #aaa; border-radius: 15px; font-size: 0.9em; font-weight: 700;">TBD</div>
       </div>
     </div>
   </div>
 
   <div>
-    <h3 style="color: #0c2340; border-left: 5px solid #806600; padding-left: 15px; margin-bottom: 20px; text-transform: none;">Historical Qualifier Performance (Canyons)</h3>
-    <div style="overflow-x: auto;">
-      <table style="width: 100%; border-collapse: collapse; background: #ffffff; border: 1px solid #0c2340;">
+    <h3 style="color: #0c2340; border-left: 5px solid #0c2340; padding-left: 15px; margin-bottom: 20px; text-transform: none; font-size: 1.3em;">Qualifier Performance History</h3>
+    <div style="overflow-x: auto; border-radius: 8px 8px 0 0; border: 1.5px solid #0c2340;">
+      <table style="width: 100%; border-collapse: collapse; background: #ffffff;">
         <thead>
           <tr style="background: #0c2340; color: #ffffff;">
-            <th style="padding: 12px; border: 1px solid rgba(255,255,255,0.1); font-weight: 500;">Date</th>
-            <th style="padding: 12px; border: 1px solid rgba(255,255,255,0.1); font-weight: 500;">Course</th>
-            <th style="padding: 12px; border: 1px solid rgba(255,255,255,0.1); font-weight: 500;">Score</th>
-            <th style="padding: 12px; border: 1px solid rgba(255,255,255,0.1); font-weight: 500;">To Par</th>
+            <th style="padding: 15px; border-right: 1px solid rgba(255,255,255,0.1); font-weight: 500; font-size: 0.9em;">Date</th>
+            <th style="padding: 15px; border-right: 1px solid rgba(255,255,255,0.1); font-weight: 500; font-size: 0.9em;">Course Name</th>
+            <th style="padding: 15px; border-right: 1px solid rgba(255,255,255,0.1); font-weight: 500; font-size: 0.9em;">Score</th>
+            <th style="padding: 15px; font-weight: 500; font-size: 0.9em;">To Par</th>
           </tr>
         </thead>
-        <tbody style="text-align: center; color: #333;">
-          <tr style="border-bottom: 1px solid #0c2340;">
+        <tbody style="text-align: center; color: #333; font-family: 'Montserrat', sans-serif;">
+          <tr style="border-bottom: 1px solid #eee;">
             <td style="padding: 12px; border-right: 1px solid #eee;">Jan 22, 2026</td>
-            <td style="padding: 12px; border-right: 1px solid #eee;">Canyons</td>
-            <td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #F15A22;">68</td>
-            <td style="padding: 12px;">-4</td>
+            <td style="padding: 12px; border-right: 1px solid #eee;">The Canyons Course</td>
+            <td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #E31837; font-family: 'Oswald', sans-serif; font-size: 1.1em;">68</td>
+            <td style="padding: 12px; color: #E31837; font-weight: 600;">-4</td>
           </tr>
-          <tr style="border-bottom: 1px solid #0c2340;">
+          <tr style="border-bottom: 1px solid #eee;">
             <td style="padding: 12px; border-right: 1px solid #eee;">Sep 26, 2025</td>
-            <td style="padding: 12px; border-right: 1px solid #eee;">Canyons</td>
-            <td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700;">73</td>
-            <td style="padding: 12px;">+1</td>
+            <td style="padding: 12px; border-right: 1px solid #eee;">The Canyons Course</td>
+            <td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; font-family: 'Oswald', sans-serif; font-size: 1.1em;">73</td>
+            <td style="padding: 12px; font-weight: 600;">+1</td>
           </tr>
-          <tr style="border-bottom: 1px solid #0c2340;">
+          <tr style="border-bottom: 1px solid #eee;">
             <td style="padding: 12px; border-right: 1px solid #eee;">Sep 01, 2025</td>
-            <td style="padding: 12px; border-right: 1px solid #eee;">Canyons</td>
-            <td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #F15A22;">69</td>
-            <td style="padding: 12px;">-3</td>
+            <td style="padding: 12px; border-right: 1px solid #eee;">The Canyons Course</td>
+            <td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #E31837; font-family: 'Oswald', sans-serif; font-size: 1.1em;">69</td>
+            <td style="padding: 12px; color: #E31837; font-weight: 600;">-3</td>
           </tr>
-          <tr style="border-bottom: 1px solid #0c2340;">
+          <tr style="border-bottom: 1px solid #eee;">
             <td style="padding: 12px; border-right: 1px solid #eee;">Aug 28, 2025</td>
-            <td style="padding: 12px; border-right: 1px solid #eee;">Canyons</td>
-            <td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #F15A22;">68</td>
-            <td style="padding: 12px;">-4</td>
+            <td style="padding: 12px; border-right: 1px solid #eee;">The Canyons Course</td>
+            <td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #E31837; font-family: 'Oswald', sans-serif; font-size: 1.1em;">68</td>
+            <td style="padding: 12px; color: #E31837; font-weight: 600;">-4</td>
           </tr>
           <tr>
             <td style="padding: 12px; border-right: 1px solid #eee;">Aug 27, 2025</td>
-            <td style="padding: 12px; border-right: 1px solid #eee;">Canyons</td>
-            <td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #F15A22;">69</td>
-            <td style="padding: 12px;">-3</td>
+            <td style="padding: 12px; border-right: 1px solid #eee;">The Canyons Course</td>
+            <td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #E31837; font-family: 'Oswald', sans-serif; font-size: 1.1em;">69</td>
+            <td style="padding: 12px; color: #E31837; font-weight: 600;">-3</td>
           </tr>
         </tbody>
         <tfoot>
-          <tr style="background: rgba(12, 35, 64, 0.05); font-weight: 700;">
-            <td colspan="2" style="padding: 12px; text-align: right; border-right: 1px solid #eee;">Cumulative Average:</td>
-            <td style="padding: 12px; color: #0c2340; border-right: 1px solid #eee;">69.4</td>
-            <td style="padding: 12px; color: #F15A22;">-2.6 Avg</td>
+          <tr style="background: #fafafa; border-top: 1.5px solid #0c2340;">
+            <td colspan="2" style="padding: 15px; text-align: right; border-right: 1px solid #eee; font-weight: 600; font-size: 0.9em; color: #666;">Course Cumulative Performance:</td>
+            <td colspan="2" style="padding: 15px; text-align: center;">
+              <div style="display: inline-flex; align-items: center; gap: 15px;">
+                <span style="font-weight: 700; color: #0c2340; font-size: 1.1em;">Avg. 69.4</span>
+                <div style="background: #E31837; color: #ffffff; width: 55px; height: 55px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-weight: 700; font-size: 1.1em; box-shadow: 0 2px 8px rgba(227, 24, 55, 0.3);">
+                  -2.6
+                </div>
+              </div>
+            </td>
           </tr>
         </tfoot>
       </table>
