--- a/test-1.html
+++ b/test-1.html
@@ -482,7 +482,9 @@ new Chart(ctxInternal, {
             <td colspan="2" style="padding: 15px; text-align: right; border-right: 1px solid #eee; font-weight: 600; font-size: 0.9em; color: #666;">Course Cumulative Performance:</td>
             <td colspan="2" style="padding: 15px; text-align: center;">
               <div style="display: inline-flex; align-items: center; gap: 15px;">
-                <span style="font-weight: 700; color: #0c2340; font-size: 1.1em;">Avg. 69.4</span>
+                <span style="font-weight: 700; font-size: 1.1em;">
+                <span style="color: #0c2340;">Avg. </span><span style="color: #E31837;">69.4</span>
+                </span>
                 <div style="background: #E31837; color: #ffffff; width: 55px; height: 55px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-weight: 700; font-size: 1.1em; box-shadow: 0 2px 8px rgba(227, 24, 55, 0.3);">
                   -2.6
                 </div>
