--- a/test-1.html
+++ b/test-1.html
@@ -446,6 +446,24 @@ new Chart(ctxInternal, {
           </tr>
         </thead>
         <tbody style="text-align: center; color: #333; font-family: 'Montserrat', sans-serif;">
+          <tr style="border-bottom: 1px solid #eee; background: rgba(241, 90, 34, 0.02);">
+            <td style="padding: 12px; border-right: 1px solid #eee; color: #888;">Feb 17, 2026</td>
+            <td style="padding: 12px; border-right: 1px solid #eee; color: #888;">The Canyons Course</td>
+            <td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #ccc;">TBD</td>
+            <td style="padding: 12px; color: #ccc;">--</td>
+          </tr>
+          <tr style="border-bottom: 1px solid #eee; background: rgba(241, 90, 34, 0.02);">
+            <td style="padding: 12px; border-right: 1px solid #eee; color: #888;">Feb 12, 2026</td>
+            <td style="padding: 12px; border-right: 1px solid #eee; color: #888;">The Canyons Course</td>
+            <td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #ccc;">TBD</td>
+            <td style="padding: 12px; color: #ccc;">--</td>
+          </tr>
+          <tr style="border-bottom: 1px solid #eee; background: rgba(241, 90, 34, 0.02);">
+            <td style="padding: 12px; border-right: 1px solid #eee; color: #888;">Feb 10, 2026</td>
+            <td style="padding: 12px; border-right: 1px solid #eee; color: #888;">The Canyons Course</td>
+            <td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #ccc;">TBD</td>
+            <td style="padding: 12px; color: #ccc;">--</td>
+          </tr>
           <tr style="border-bottom: 1px solid #eee;">
             <td style="padding: 12px; border-right: 1px solid #eee;">Jan 22, 2026</td>
             <td style="padding: 12px; border-right: 1px solid #eee;">The Canyons Course</td>
@@ -470,7 +488,7 @@ new Chart(ctxInternal, {
             <td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #E31837; font-family: 'Oswald', sans-serif; font-size: 1.1em;">68</td>
             <td style="padding: 12px; color: #E31837; font-weight: 600;">-4</td>
           </tr>
-          <tr>
+          <tr style="border-bottom: 1px solid #eee;">
             <td style="padding: 12px; border-right: 1px solid #eee;">Aug 27, 2025</td>
             <td style="padding: 12px; border-right: 1px solid #eee;">The Canyons Course</td>
             <td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #E31837; font-family: 'Oswald', sans-serif; font-size: 1.1em;">69</td>
@@ -483,7 +501,7 @@ new Chart(ctxInternal, {
             <td colspan="2" style="padding: 15px; text-align: center;">
               <div style="display: inline-flex; align-items: center; gap: 15px;">
                 <span style="font-weight: 700; font-size: 1.1em;">
-                <span style="color: #0c2340;">Avg. </span><span style="color: #E31837;">69.4</span>
+                  <span style="color: #0c2340;">Avg. </span><span style="color: #E31837;">69.4</span>
                 </span>
                 <div style="background: #E31837; color: #ffffff; width: 55px; height: 55px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-weight: 700; font-size: 1.1em; box-shadow: 0 2px 8px rgba(227, 24, 55, 0.3);">
                   -2.6
