--- a/test-1.html
+++ b/test-1.html
@@ -632,3 +632,127 @@ new Chart(ctxInternal, {
   </div>
 </div>
 
+
+
+
+900 그리고 독립된 테이블 구조.
+
+
+<div id="joshua-qualifier-section" style="width: 100%; max-width: 900px; margin: 40px auto; padding: 0; font-family: 'Oswald', sans-serif; box-sizing: border-box; clear: both;">
+  
+  <div style="margin-bottom: 40px; width: 100%;">
+    <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px; border-left: 5px solid #E31837; padding-left: 15px;">
+      <h3 style="color: #0c2340; margin: 0; text-transform: none; font-size: 1.3em; line-height: 1.2; font-family: 'Oswald', sans-serif;">Upcoming Tournaments</h3>
+      <span style="font-family: 'Montserrat', sans-serif; font-size: 0.85em; color: #888;">Internal Spring Qualifier</span>
+    </div>
+    
+    <div style="display: flex; flex-wrap: wrap; gap: 15px; width: 100%;">
+      <div style="flex: 1; min-width: 250px; background: #ffffff; border: 1.5px solid #0c2340; border-radius: 8px; padding: 20px; text-align: center; box-shadow: 0 4px 10px rgba(0,0,0,0.03); box-sizing: border-box;">
+        <div style="font-size: 0.85em; color: #666; margin-bottom: 5px; font-family: 'Montserrat', sans-serif;">Feb 10 (Tue)</div>
+        <div style="font-size: 1.05em; font-weight: 600; color: #0c2340; margin-bottom: 12px; letter-spacing: 0.2px;">The Canyons Course / 1:00</div>
+        <div style="display: inline-block; padding: 4px 15px; background: #f0f0f0; color: #aaa; border-radius: 15px; font-size: 0.9em; font-weight: 700;">TBD</div>
+      </div>
+      <div style="flex: 1; min-width: 250px; background: #ffffff; border: 1.5px solid #0c2340; border-radius: 8px; padding: 20px; text-align: center; box-shadow: 0 4px 10px rgba(0,0,0,0.03); box-sizing: border-box;">
+        <div style="font-size: 0.85em; color: #666; margin-bottom: 5px; font-family: 'Montserrat', sans-serif;">Feb 12 (Thur)</div>
+        <div style="font-size: 1.05em; font-weight: 600; color: #0c2340; margin-bottom: 12px; letter-spacing: 0.2px;">The Canyons Course / 1:00</div>
+        <div style="display: inline-block; padding: 4px 15px; background: #f0f0f0; color: #aaa; border-radius: 15px; font-size: 0.9em; font-weight: 700;">TBD</div>
+      </div>
+      <div style="flex: 1; min-width: 250px; background: #ffffff; border: 1.5px solid #0c2340; border-radius: 8px; padding: 20px; text-align: center; box-shadow: 0 4px 10px rgba(0,0,0,0.03); box-sizing: border-box;">
+        <div style="font-size: 0.85em; color: #666; margin-bottom: 5px; font-family: 'Montserrat', sans-serif;">Feb 17 (Tue)</div>
+        <div style="font-size: 1.05em; font-weight: 600; color: #0c2340; margin-bottom: 12px; letter-spacing: 0.2px;">The Canyons Course / 1:00</div>
+        <div style="display: inline-block; padding: 4px 15px; background: #f0f0f0; color: #aaa; border-radius: 15px; font-size: 0.9em; font-weight: 700;">TBD</div>
+      </div>
+    </div>
+  </div>
+
+  <div style="width: 100%;">
+    <h3 style="color: #0c2340; border-left: 5px solid #0c2340; padding-left: 15px; margin-bottom: 20px; text-transform: none; font-size: 1.3em; line-height: 1.2; font-family: 'Oswald', sans-serif;">Qualifier Performance History</h3>
+    <div style="overflow-x: auto; border-radius: 8px 8px 0 0; border: 1.5px solid #0c2340; width: 100%; box-sizing: border-box;">
+      <table style="width: 100%; border-collapse: collapse; background: #ffffff; margin: 0; padding: 0; border: none;">
+        <thead>
+          <tr style="background: #0c2340; color: #ffffff;">
+            <th style="padding: 15px; border-right: 1px solid rgba(255,255,255,0.1); font-weight: 500; font-size: 0.9em; font-family: 'Oswald', sans-serif;">Date</th>
+            <th style="padding: 15px; border-right: 1px solid rgba(255,255,255,0.1); font-weight: 500; font-size: 0.9em; font-family: 'Oswald', sans-serif;">Course Name</th>
+            <th style="padding: 15px; border-right: 1px solid rgba(255,255,255,0.1); font-weight: 500; font-size: 0.9em; font-family: 'Oswald', sans-serif;">Score</th>
+            <th style="padding: 15px; font-weight: 500; font-size: 0.9em; font-family: 'Oswald', sans-serif;">To Par</th>
+          </tr>
+        </thead>
+        <tbody style="text-align: center; color: #333; font-family: 'Montserrat', sans-serif;">
+          <tr style="border-bottom: 1px solid #eee; background: rgba(12, 35, 64, 0.02);">
+            <td style="padding: 12px; border-right: 1px solid #eee; color: #888; font-size: 0.95em;">Feb 17, 2026</td>
+            <td style="padding: 12px; border-right: 1px solid #eee; color: #888; font-size: 0.95em;">The Canyons Course</td>
+            <td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #ccc; font-family: 'Oswald', sans-serif;">TBD</td>
+            <td style="padding: 12px; color: #ccc;">--</td>
+          </tr>
+          <tr style="border-bottom: 1px solid #eee; background: rgba(12, 35, 64, 0.02);">
+            <td style="padding: 12px; border-right: 1px solid #eee; color: #888; font-size: 0.95em;">Feb 12, 2026</td>
+            <td style="padding: 12px; border-right: 1px solid #eee; color: #888; font-size: 0.95em;">The Canyons Course</td>
+            <td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #ccc; font-family: 'Oswald', sans-serif;">TBD</td>
+            <td style="padding: 12px; color: #ccc;">--</td>
+          </tr>
+          <tr style="border-bottom: 1px solid #eee; background: rgba(12, 35, 64, 0.02);">
+            <td style="padding: 12px; border-right: 1px solid #eee; color: #888; font-size: 0.95em;">Feb 10, 2026</td>
+            <td style="padding: 12px; border-right: 1px solid #eee; color: #888; font-size: 0.95em;">The Canyons Course</td>
+            <td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #ccc; font-family: 'Oswald', sans-serif;">TBD</td>
+            <td style="padding: 12px; color: #ccc;">--</td>
+          </tr>
+          <tr style="border-bottom: 1px solid #eee;">
+            <td style="padding: 12px; border-right: 1px solid #eee; font-size: 0.95em;">Jan 22, 2026</td>
+            <td style="padding: 12px; border-right: 1px solid #eee; font-size: 0.95em;">The Canyons Course</td>
+            <td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #E31837; font-family: 'Oswald', sans-serif; font-size: 1.1em;">68</td>
+            <td style="padding: 12px; color: #E31837; font-weight: 600;">-4</td>
+          </tr>
+          <tr style="border-bottom: 1px solid #eee;">
+            <td style="padding: 12px; border-right: 1px solid #eee; font-size: 0.95em;">Sep 26, 2025</td>
+            <td style="padding: 12px; border-right: 1px solid #eee; font-size: 0.95em;">The Canyons Course</td>
+            <td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; font-family: 'Oswald', sans-serif; font-size: 1.1em;">73</td>
+            <td style="padding: 12px; font-weight: 600;">+1</td>
+          </tr>
+          <tr style="border-bottom: 1px solid #eee;">
+            <td style="padding: 12px; border-right: 1px solid #eee; font-size: 0.95em;">Sep 01, 2025</td>
+            <td style="padding: 12px; border-right: 1px solid #eee; font-size: 0.95em;">The Canyons Course</td>
+            <td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #E31837; font-family: 'Oswald', sans-serif; font-size: 1.1em;">69</td>
+            <td style="padding: 12px; color: #E31837; font-weight: 600;">-3</td>
+          </tr>
+          <tr style="border-bottom: 1px solid #eee;">
+            <td style="padding: 12px; border-right: 1px solid #eee; font-size: 0.95em;">Aug 28, 2025</td>
+            <td style="padding: 12px; border-right: 1px solid #eee; font-size: 0.95em;">The Canyons Course</td>
+            <td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #E31837; font-family: 'Oswald', sans-serif; font-size: 1.1em;">68</td>
+            <td style="padding: 12px; color: #E31837; font-weight: 600;">-4</td>
+          </tr>
+          <tr>
+            <td style="padding: 12px; border-right: 1px solid #eee; font-size: 0.95em;">Aug 27, 2025</td>
+            <td style="padding: 12px; border-right: 1px solid #eee; font-size: 0.95em;">The Canyons Course</td>
+            <td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #E31837; font-family: 'Oswald', sans-serif; font-size: 1.1em;">69</td>
+            <td style="padding: 12px; color: #E31837; font-weight: 600;">-3</td>
+          </tr>
+        </tbody>
+        <tfoot>
+          <tr style="background: #fafafa; border-top: 1.5px solid #0c2340;">
+            <td colspan="2" style="padding: 15px; text-align: right; border-right: 1px solid #eee; font-weight: 600; font-size: 0.9em; color: #666; font-family: 'Montserrat', sans-serif;">Course Cumulative Performance:</td>
+            <td colspan="2" style="padding: 15px; text-align: center;">
+              <div style="display: inline-flex; align-items: center; gap: 15px;">
+                <span style="font-weight: 700; font-size: 1.1em; font-family: 'Oswald', sans-serif;">
+                  <span style="color: #0c2340;">Avg. </span><span style="color: #E31837;">69.4</span>
+                </span>
+                <div style="background: #E31837; color: #ffffff; width: 55px; height: 55px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-weight: 700; font-size: 1.1em; box-shadow: 0 2px 8px rgba(227, 24, 55, 0.3); font-family: 'Oswald', sans-serif;">
+                  -2.6
+                </div>
+              </div>
+            </td>
+          </tr>
+        </tfoot>
+      </table>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+태스트
