--- a/test-1.html
+++ b/test-1.html
@@ -556,10 +556,10 @@ new Chart(ctxInternal, {
       <table style="width: 100%; border-collapse: collapse; background: #ffffff; margin: 0; padding: 0; border: none; box-sizing: border-box;">
         <thead>
           <tr style="background: #0c2340; color: #ffffff; box-sizing: border-box;">
-            <th style="padding: 15px; border-right: 1px solid rgba(255,255,255,0.1); font-weight: 500; font-size: 0.9em; font-family: 'Oswald', sans-serif; box-sizing: border-box;">Date</th>
-            <th style="padding: 15px; border-right: 1px solid rgba(255,255,255,0.1); font-weight: 500; font-size: 0.9em; font-family: 'Oswald', sans-serif; box-sizing: border-box;">Course Name</th>
-            <th style="padding: 15px; border-right: 1px solid rgba(255,255,255,0.1); font-weight: 500; font-size: 0.9em; font-family: 'Oswald', sans-serif; box-sizing: border-box;">Score</th>
-            <th style="padding: 15px; font-weight: 500; font-size: 0.9em; font-family: 'Oswald', sans-serif; box-sizing: border-box;">To Par</th>
+            <th style="width: 20%; padding: 15px; border-right: 1px solid rgba(255,255,255,0.1); font-weight: 500; font-size: 0.9em; font-family: 'Oswald', sans-serif; box-sizing: border-box;">Date</th>
+            <th style="width: 45%; padding: 15px; border-right: 1px solid rgba(255,255,255,0.1); font-weight: 500; font-size: 0.9em; font-family: 'Oswald', sans-serif; box-sizing: border-box;">Course Name</th>
+            <th style="width: 17.5%; padding: 15px; border-right: 1px solid rgba(255,255,255,0.1); font-weight: 500; font-size: 0.9em; font-family: 'Oswald', sans-serif; box-sizing: border-box;">Score</th>
+            <th style="width: 17.5%; padding: 15px; font-weight: 500; font-size: 0.9em; font-family: 'Oswald', sans-serif; box-sizing: border-box;">To Par</th>
           </tr>
         </thead>
         <tbody style="text-align: center; color: #333; font-family: 'Montserrat', sans-serif; box-sizing: border-box;">
@@ -614,15 +614,15 @@ new Chart(ctxInternal, {
         </tbody>
         <tfoot style="box-sizing: border-box;">
           <tr style="background: #fafafa; border-top: 1.5px solid #0c2340; box-sizing: border-box;">
-            <td colspan="2" style="padding: 12px 15px; text-align: right; border-right: 1px solid #eee; font-weight: 600; font-size: 0.9em; color: #666; font-family: 'Montserrat', sans-serif; box-sizing: border-box;">Course Cumulative Performance:</td>
-            <td colspan="2" style="padding: 12px 15px; text-align: center; box-sizing: border-box;">
-              <div style="display: inline-flex; align-items: center; gap: 10px; box-sizing: border-box;">
-                <span style="font-weight: 700; font-size: 1.1em; font-family: 'Oswald', sans-serif; box-sizing: border-box;">
-                  <span style="color: #0c2340;">Avg. </span><span style="color: #E31837;">69.4</span>
-                </span>
-                <div style="background: #E31837; color: #ffffff; width: 32px; height: 32px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-weight: 700; font-size: 0.85em; box-sizing: border-box; font-family: 'Oswald', sans-serif;">
-                  -2.6
-                </div>
+            <td colspan="2" style="padding: 12px 15px; text-align: right; border-right: 1px solid #eee; font-weight: 600; font-size: 0.85em; color: #888; font-family: 'Montserrat', sans-serif; box-sizing: border-box;">Course Cumulative Performance:</td>
+            <td style="padding: 12px 15px; text-align: center; border-right: 1px solid #eee; box-sizing: border-box;">
+              <span style="font-weight: 700; font-size: 1.05em; font-family: 'Oswald', sans-serif; box-sizing: border-box;">
+                <span style="color: #0c2340;">Avg. </span><span style="color: #E31837;">69.4</span>
+              </span>
+            </td>
+            <td style="padding: 12px 15px; text-align: center; box-sizing: border-box;">
+              <div style="background: #E31837; color: #ffffff; width: 32px; height: 32px; border-radius: 50%; display: inline-flex; align-items: center; justify-content: center; font-weight: 700; font-size: 0.85em; box-sizing: border-box; font-family: 'Oswald', sans-serif;">
+                -2.6
               </div>
             </td>
           </tr>
