--- a/test-1.html
+++ b/test-1.html
@@ -408,24 +408,24 @@ new Chart(ctxInternal, {
 
 <div id="joshua-qualifier-section" style="width: 100%; max-width: 900px; margin: 40px auto; padding: 0; font-family: 'Oswald', sans-serif; box-sizing: border-box; clear: both;">
   
-  <div style="margin-bottom: 40px; width: 100%; box-sizing: border-box;">
+  <div style="margin-bottom: 40px; width: 100%; box-sizing: border-box; padding: 0 10px;">
     <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px; border-left: 5px solid #E31837; padding-left: 15px;">
       <h3 style="color: #0c2340; margin: 0; text-transform: none; font-size: 1.3em; line-height: 1.2;">Upcoming Tournaments</h3>
       <span style="font-family: 'Montserrat', sans-serif; font-size: 0.85em; color: #888;">Internal Spring Qualifier</span>
     </div>
     
     <div style="display: flex; flex-wrap: wrap; gap: 15px; width: 100%;">
-      <div style="flex: 1; min-width: 250px; background: #ffffff; border: 1.5px solid #0c2340; border-radius: 8px; padding: 20px; text-align: center; box-shadow: 0 4px 10px rgba(0,0,0,0.03);">
+      <div style="flex: 1; min-width: 250px; background: #ffffff; border: 1.5px solid #0c2340; border-radius: 8px; padding: 20px; text-align: center; box-shadow: 0 4px 10px rgba(0,0,0,0.03); box-sizing: border-box;">
         <div style="font-size: 0.85em; color: #666; margin-bottom: 5px; font-family: 'Montserrat', sans-serif;">Feb 10 (Tue)</div>
         <div style="font-size: 1.05em; font-weight: 600; color: #0c2340; margin-bottom: 12px;">The Canyons Course / 1:00</div>
         <div style="display: inline-block; padding: 4px 15px; background: #f0f0f0; color: #aaa; border-radius: 15px; font-size: 0.9em; font-weight: 700;">TBD</div>
       </div>
-      <div style="flex: 1; min-width: 250px; background: #ffffff; border: 1.5px solid #0c2340; border-radius: 8px; padding: 20px; text-align: center; box-shadow: 0 4px 10px rgba(0,0,0,0.03);">
+      <div style="flex: 1; min-width: 250px; background: #ffffff; border: 1.5px solid #0c2340; border-radius: 8px; padding: 20px; text-align: center; box-shadow: 0 4px 10px rgba(0,0,0,0.03); box-sizing: border-box;">
         <div style="font-size: 0.85em; color: #666; margin-bottom: 5px; font-family: 'Montserrat', sans-serif;">Feb 12 (Thur)</div>
         <div style="font-size: 1.05em; font-weight: 600; color: #0c2340; margin-bottom: 12px;">The Canyons Course / 1:00</div>
         <div style="display: inline-block; padding: 4px 15px; background: #f0f0f0; color: #aaa; border-radius: 15px; font-size: 0.9em; font-weight: 700;">TBD</div>
       </div>
-      <div style="flex: 1; min-width: 250px; background: #ffffff; border: 1.5px solid #0c2340; border-radius: 8px; padding: 20px; text-align: center; box-shadow: 0 4px 10px rgba(0,0,0,0.03);">
+      <div style="flex: 1; min-width: 250px; background: #ffffff; border: 1.5px solid #0c2340; border-radius: 8px; padding: 20px; text-align: center; box-shadow: 0 4px 10px rgba(0,0,0,0.03); box-sizing: border-box;">
         <div style="font-size: 0.85em; color: #666; margin-bottom: 5px; font-family: 'Montserrat', sans-serif;">Feb 17 (Tue)</div>
         <div style="font-size: 1.05em; font-weight: 600; color: #0c2340; margin-bottom: 12px;">The Canyons Course / 1:00</div>
         <div style="display: inline-block; padding: 4px 15px; background: #f0f0f0; color: #aaa; border-radius: 15px; font-size: 0.9em; font-weight: 700;">TBD</div>
@@ -434,7 +434,7 @@ new Chart(ctxInternal, {
   </div>
 
   <div style="width: 100%; box-sizing: border-box;">
-    <div style="display: flex; justify-content: space-between; align-items: flex-end; margin-bottom: 15px; flex-wrap: wrap; gap: 10px;">
+    <div style="display: flex; justify-content: space-between; align-items: flex-end; margin-bottom: 15px; flex-wrap: wrap; gap: 10px; padding: 0 10px;">
       <h3 style="color: #0c2340; border-left: 5px solid #0c2340; padding-left: 15px; margin: 0; text-transform: none; font-size: 1.3em; line-height: 1.2;">Qualifier Performance History</h3>
       
       <div style="font-family: 'Montserrat', sans-serif; font-size: 0.8em; display: flex; gap: 10px; align-items: center;">
@@ -444,14 +444,14 @@ new Chart(ctxInternal, {
       </div>
     </div>
 
-    <div style="overflow-x: auto; border-radius: 8px 8px 0 0; border: 1.5px solid #0c2340; width: 100%;">
-      <table style="width: 100%; border-collapse: collapse; background: #ffffff; margin: 0; border: none;">
+    <div style="overflow-x: auto; width: 100%; box-sizing: border-box;">
+      <table style="width: 100%; border-collapse: collapse; background: #ffffff; margin: 0; border: 1.5px solid #0c2340; box-sizing: border-box;">
         <thead>
           <tr style="background: #0c2340; color: #ffffff;">
-            <th style="width: 20%; padding: 15px; border-right: 1px solid rgba(255,255,255,0.1); font-weight: 500; font-size: 0.9em;">Date</th>
-            <th style="width: 45%; padding: 15px; border-right: 1px solid rgba(255,255,255,0.1); font-weight: 500; font-size: 0.9em;">Course Name</th>
-            <th style="width: 17.5%; padding: 15px; border-right: 1px solid rgba(255,255,255,0.1); font-weight: 500; font-size: 0.9em;">Score</th>
-            <th style="width: 17.5%; padding: 15px; font-weight: 500; font-size: 0.9em;">To Par</th>
+            <th style="width: 20%; padding: 15px; border-right: 1px solid rgba(255,255,255,0.1); font-weight: 500; font-size: 0.9em; text-align: center;">Date</th>
+            <th style="width: 45%; padding: 15px; border-right: 1px solid rgba(255,255,255,0.1); font-weight: 500; font-size: 0.9em; text-align: center;">Course Name</th>
+            <th style="width: 17.5%; padding: 15px; border-right: 1px solid rgba(255,255,255,0.1); font-weight: 500; font-size: 0.9em; text-align: center;">Score</th>
+            <th style="width: 17.5%; padding: 15px; font-weight: 500; font-size: 0.9em; text-align: center;">To Par</th>
           </tr>
         </thead>
         <tbody style="text-align: center; color: #333; font-family: 'Montserrat', sans-serif;">
@@ -466,14 +466,14 @@ new Chart(ctxInternal, {
         </tbody>
         <tfoot>
           <tr style="background: #fafafa; border-top: 1.5px solid #0c2340;">
-            <td style="padding: 12px 15px; border-right: 1px solid #eee;"></td>
-            <td style="padding: 12px 15px; text-align: right; border-right: 1px solid #eee; font-weight: 600; font-size: 0.85em; color: #888; font-family: 'Montserrat', sans-serif;">Course Cumulative Performance:</td>
-            <td style="padding: 12px 15px; text-align: center; border-right: 1px solid #eee;">
+            <td style="width: 20%; padding: 12px; border-right: 1px solid #eee;"></td>
+            <td style="width: 45%; padding: 12px 15px; text-align: right; border-right: 1px solid #eee; font-weight: 600; font-size: 0.85em; color: #888; font-family: 'Montserrat', sans-serif;">Course Cumulative Performance:</td>
+            <td style="width: 17.5%; padding: 12px; text-align: center; border-right: 1px solid #eee;">
               <span style="font-weight: 700; font-size: 1.05em; font-family: 'Oswald', sans-serif;">
                 <span style="color: #0c2340;">Avg. </span><span style="color: #E31837;">69.4</span>
               </span>
             </td>
-            <td style="padding: 12px 15px; text-align: center;">
+            <td style="width: 17.5%; padding: 12px; text-align: center;">
               <div style="background: #E31837; color: #ffffff; width: 32px; height: 32px; border-radius: 50%; display: inline-flex; align-items: center; justify-content: center; font-weight: 700; font-size: 0.85em; font-family: 'Oswald', sans-serif;">
                 -2.6
               </div>
