--- a/test-1.html
+++ b/test-1.html
@@ -585,7 +585,7 @@
 
 
 
- <div class="current-focus-section" style="max-width: 900px; margin: 60px auto 40px; padding: 0 20px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
+<div class="current-focus-section" style="max-width: 900px; margin: 60px auto 40px; padding: 0; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
     <a id="current-focus" style="display: block; position: relative; top: -100px; visibility: hidden;"></a>
     <div style="border-bottom: 2px solid #0c2340; padding-bottom: 20px; margin-bottom: 40px; text-align: center;">
         <h1 style="margin: 0; color: #0c2340; font-size: 26px; letter-spacing: 2px; font-weight: 900; text-transform: uppercase;">
@@ -594,7 +594,7 @@
     </div>
 </div>
 
-<div class="legal-pad-wrapper" style="max-width: 900px; margin: 0 auto 100px; position: relative; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; padding: 0 15px; box-sizing: border-box;">
+<div class="legal-pad-wrapper" style="max-width: 900px; margin: 0 auto 100px; position: relative; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; padding: 0; box-sizing: border-box;">
     <div style="width: 100%; height: 35px; background: #334155; border-radius: 20px 20px 0 0; position: relative; z-index: 2; box-shadow: inset 0 -5px 10px rgba(0,0,0,0.2); border: 1px solid #1e293b;">
         <div style="display: flex; justify-content: center; gap: 40px; padding-top: 10px;">
             <div style="width: 12px; height: 12px; background: #1e293b; border-radius: 50%;"></div>
