--- a/test-1.html
+++ b/test-1.html
@@ -271,9 +271,11 @@
   
 
   
+
+
 <div class="performance-log-section" style="max-width: 900px; margin: 0 auto 60px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
   <style>
-    /* 테이블 구조 최적화 */
+    /* 베너 바로 밑 토너먼트 스케줄 테이블 구조 최적화 */
     .log-table { width: 100%; border-collapse: collapse; background: white; table-layout: fixed; margin-bottom: 0; border: none; }
     .log-table th { background: #f8f9fa; font-size: 11px; color: #0c2340; text-transform: uppercase; padding: 12px 10px; border-bottom: 2px solid #0c2340; text-align: center; }
     .log-table th.col-left { text-align: left; padding-left: 20px; }
@@ -294,6 +296,9 @@
       display: flex; 
       flex-direction: column;
       overflow: hidden; /* 모서리 끊김 해결 */
+      /* 너비 최적화: 테두리 2px 두께를 고려하여 시각적 정렬 맞춤 */
+      box-sizing: border-box;
+      width: 100%;
     }
 
     /* 실시간 상태 표시 점 애니메이션 추가 */
@@ -333,6 +338,7 @@
     }
   </style>
 
+  
   <div style="border-bottom: 2px solid #0c2340; padding-bottom: 20px; margin-bottom: 40px; text-align: center;">
     <h1 style="margin: 0; color: #0c2340; font-size: 24px; letter-spacing: 2px; font-weight: 900; text-transform: uppercase;">
       Tournament Schedule & Scoring
@@ -588,32 +594,24 @@
 </style>
 
       <div style="text-align: right;">
-
       <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Total Score</span>
-
       <span style="color: #ffffff; font-size: 18px; font-weight: 900;">216</span>
-
     </div>
 
     <div style="text-align: right;">
-
       <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Par</span>
-
       <span style="color: #ffffff; font-size: 18px; font-weight: 900;">E</span>
-
     </div>
 
     <div style="text-align: right;">
-
       <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Final Rank</span>
-
       <span style="color: #ffffff; font-size: 18px; font-weight: 900;">T3</span>
-
     </div>
 
   </div>
-
 </div>
+
+  
 
   
 
