--- a/test-1.html
+++ b/test-1.html
@@ -296,7 +296,7 @@
       border: 1px solid #e2e8f0; /* 배너와 동일한 테두리 두께 및 색상 */
       border-radius: 25px; /* 배너와 동일한 곡률 */
       padding: 0; 
-      box-shadow: 0 20px 40px rgba(0,0,0,0.18); /* 배너와 동일한 그림자 */
+      box-shadow: 0 10px 30px rgba(0,0,0,0.12); /* 그림자가 옆으로 퍼져 넓어 보이지 않도록 확산 범위 축소 */
       margin-bottom: 50px; 
       position: relative; 
       display: flex; 
@@ -316,6 +316,21 @@
       background-color: #ffffff;
       border-radius: 50%;
       display: inline-block;
+    }
+
+    /* 버튼 스타일 추가 (기존 구조 유지용) */
+    .pairing-btn {
+      cursor: pointer;
+      display: inline-flex;
+      align-items: center;
+      padding: 2px 6px;
+      background: #f1f5f9;
+      border: 1px solid #e2e8f0;
+      border-radius: 4px;
+      font-size: 10px;
+      font-weight: 800;
+      color: #64748b;
+      text-transform: uppercase;
     }
 
     @media (max-width: 768px) {
