--- a/test-1.html
+++ b/test-1.html
@@ -243,6 +243,7 @@
     
 
 
+
 <div class="ncaa-hero-section" style="font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; width: 100%; max-width: 900px; margin: 0 auto 50px; padding: 140px 10px 0; box-sizing: border-box;">
 
   <div style="text-align: center; margin-bottom: 35px;">
@@ -260,7 +261,7 @@
   
 
 <div class="image-section" style="max-width: 900px; margin: 0 auto 40px; padding: 0 15px; box-sizing: border-box;">
-    <div style="width: 100%; border-radius: 25px; overflow: hidden; box-shadow: 0 20px 40px rgba(0,0,0,0.18); background-color: #ffffff; border: 1px solid #e2e8f0;">
+    <div style="width: 100%; border-radius: 25px; overflow: hidden; box-shadow: 0 20px 40px rgba(0,0,0,0.18); background-color: #ffffff; border: 1px solid #e2e8f0; box-sizing: border-box;">
         <img src="https://drive.google.com/thumbnail?id=11fyK0kkDZxFBu-A3fonPZwXJirY2VRty&sz=w1200" 
              style="width: 100%; height: auto; display: block; object-fit: contain;" 
              alt="Joshua Hong Performance"
@@ -287,6 +288,7 @@
     /* 테두리 끊김 방지를 위해 overflow: hidden 재적용 및 스크롤 간섭 제거 */
     /* 배너 이미지 박스와 동일한 너비를 위해 border와 box-shadow 수치 수정 */
     .live-event-card { 
+      width: 100%;
       background: #ffffff; 
       border: 1px solid #e2e8f0; 
       border-radius: 25px; 
@@ -297,6 +299,7 @@
       display: flex; 
       flex-direction: column;
       overflow: hidden; /* 모서리 끊김 해결 */
+      box-sizing: border-box; /* 패딩 및 테두리 포함 계산 고정 */
     }
 
     /* 실시간 상태 표시 점 애니메이션 추가 */
@@ -617,7 +620,6 @@
   </div>
 
 </div>
-
   
 
   
