--- a/test-1.html
+++ b/test-1.html
@@ -244,7 +244,7 @@
 
 
 
-<div class="ncaa-hero-section" style="font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; width: 100%; max-width: 900px; margin: 0 auto 50px; padding: 140px 10px 0; box-sizing: border-box;">
+<div class="ncaa-hero-section" style="font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; width: 100%; max-width: 900px; margin: 0 auto 50px; padding: 140px 15px 0; box-sizing: border-box;">
 
   <div style="text-align: center; margin-bottom: 35px;">
     <h1 style="font-size: 34px; font-weight: 900; color: #0c2340; margin: 0; letter-spacing: -1.5px; text-transform: uppercase; line-height: 1.1;">
@@ -260,7 +260,7 @@
   </div>
   
 
-<div class="image-section" style="max-width: 900px; margin: 0 auto 40px; padding: 0 15px; box-sizing: border-box;">
+<div class="image-section" style="max-width: 900px; margin: 0 auto 40px; padding: 0; box-sizing: border-box;">
     <div style="width: 100%; border-radius: 25px; overflow: hidden; box-shadow: 0 20px 40px rgba(0,0,0,0.18); background-color: #ffffff; border: 1px solid #e2e8f0; box-sizing: border-box;">
         <img src="https://drive.google.com/thumbnail?id=11fyK0kkDZxFBu-A3fonPZwXJirY2VRty&sz=w1200" 
              style="width: 100%; height: auto; display: block; object-fit: contain;" 
@@ -276,6 +276,9 @@
   
 <div class="performance-log-section" style="max-width: 900px; margin: 0 auto 60px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
   <style>
+    /* 모든 요소에 box-sizing: border-box 강제 적용 */
+    .performance-log-section *, .performance-log-section *::before, .performance-log-section *::after { box-sizing: border-box; }
+
     /* 테이블 구조 최적화 */
     .log-table { width: 100%; border-collapse: collapse; background: white; table-layout: fixed; margin-bottom: 0; border: none; }
     .log-table th { background: #f8f9fa; font-size: 11px; color: #0c2340; text-transform: uppercase; padding: 12px 10px; border-bottom: 2px solid #0c2340; text-align: center; }
@@ -299,7 +302,6 @@
       display: flex; 
       flex-direction: column;
       overflow: hidden; /* 모서리 끊김 해결 */
-      box-sizing: border-box; /* 패딩 및 테두리 포함 계산 고정 */
     }
 
     /* 실시간 상태 표시 점 애니메이션 추가 */
@@ -318,7 +320,7 @@
 
     @media (max-width: 768px) {
       .log-table thead { display: none; }
-      .log-table, .log-table tbody, .log-table tr, .log-table td { display: block; width: 100%; box-sizing: border-box; }
+      .log-table, .log-table tbody, .log-table tr, .log-table td { display: block; width: 100%; }
       .log-table tr { margin-bottom: 15px; border: 1px solid #eee !important; border-radius: 12px; padding: 12px; }
       .log-table td { border: none !important; padding: 0 !important; text-align: left !important; }
       .hide-mobile { display: none !important; }
