--- a/test-1.html
+++ b/test-1.html
@@ -629,7 +629,7 @@
 
 
 
-<div class="current-focus-section" style="max-width: 900px; margin: 60px auto 40px; padding: 0 20px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
+<div class="current-focus-section" style="max-width: 900px; margin: 60px auto 40px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
     <a id="current-focus" style="display: block; position: relative; top: -100px; visibility: hidden;"></a>
     <div style="border-bottom: 2px solid #0c2340; padding-bottom: 20px; margin-bottom: 40px; text-align: center;">
         <h1 style="margin: 0; color: #0c2340; font-size: 26px; letter-spacing: 2px; font-weight: 900; text-transform: uppercase;">
@@ -639,7 +639,7 @@
 </div>
 
 <div class="legal-pad-wrapper" style="max-width: 900px; margin: 0 auto 100px; position: relative; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; padding: 0 15px; box-sizing: border-box;">
-    <div style="width: 100%; height: 35px; background: #334155; border-radius: 20px 20px 0 0; position: relative; z-index: 2; box-shadow: inset 0 -5px 10px rgba(0,0,0,0.2); border: 1px solid #1e293b;">
+    <div style="width: 100%; height: 35px; background: #334155; border-radius: 20px 20px 0 0; position: relative; z-index: 2; box-shadow: inset 0 -5px 10px rgba(0,0,0,0.2); border: 1px solid #1e293b; box-sizing: border-box;">
         <div style="display: flex; justify-content: center; gap: 40px; padding-top: 10px;">
             <div style="width: 12px; height: 12px; background: #1e293b; border-radius: 50%;"></div>
             <div style="width: 12px; height: 12px; background: #1e293b; border-radius: 50%;"></div>
@@ -647,7 +647,7 @@
         </div>
     </div>
     
-    <div class="legal-pad-content" style="background: #fff9c4; background-image: linear-gradient(#e5e0a3 1px, transparent 1px); background-size: 100% 28px; border-left: 1px solid #e5e0a3; border-right: 1px solid #e5e0a3; border-bottom: 4px solid #d4cf92; border-radius: 0 0 60px 60px; padding: 40px 40px 60px 80px; position: relative; box-shadow: 15px 15px 30px rgba(0,0,0,0.07); min-height: 550px; display: flex; flex-direction: column;">
+    <div class="legal-pad-content" style="background: #fff9c4; background-image: linear-gradient(#e5e0a3 1px, transparent 1px); background-size: 100% 28px; border-left: 1px solid #e5e0a3; border-right: 1px solid #e5e0a3; border-bottom: 4px solid #d4cf92; border-radius: 0 0 60px 60px; padding: 40px 40px 60px 80px; position: relative; box-shadow: 15px 15px 30px rgba(0,0,0,0.07); min-height: 550px; display: flex; flex-direction: column; box-sizing: border-box;">
         
         <div style="position: absolute; left: 65px; top: 0; bottom: 0; width: 2px; border-left: 1px solid #ff8a80; border-right: 1px solid #ff8a80; pointer-events: none;"></div>
 
